# internal/http/controller/admin/permission/shared.go
@@ -30,3 +30,25 @@ func (data *HttpApiData) Fill(casbinRule gormadapter.CasbinRule) {
 	data.Path = casbinRule.V1
 	data.Method = casbinRule.V2
 }
+
+type RoleData struct {
+	Id          uint             `json:"id" mapstructure:"id" validate:"required"`
+	Name        string           `json:"name" mapstructure:"name" validate:"required"`
+	IsPublic    bool             `json:"is_public" mapstructure:"is_public" validate:"required"`
+	CreatedAt   time.Time        `json:"created_at" mapstructure:"created_at" validate:"required" format:"date-time"`
+	UpdatedAt   time.Time        `json:"updated_at" mapstructure:"updated_at" validate:"required" format:"date-time"`
+	Permissions []PermissionData `json:"permissions" mapstructure:"permissions" validate:"required"`
+}
+
+func (data *RoleData) Fill(m *model.Role) {
+	data.Id = m.Id
+	data.Name = m.Name
+	data.IsPublic = m.IsPublic
+	data.CreatedAt = m.CreatedAt
+	data.UpdatedAt = m.UpdatedAt
+	data.Permissions = make([]PermissionData, len(m.Permissions))
+
+	for i := 0; i < len(m.Permissions); i++ {
+		data.Permissions[i].Fill(&m.Permissions[i])
+	}
+}
